== Version 2.5.6 Work in progress (not released -- this is a draft) ==

  TODO: compile .po (creme_core)

  Users side :
  ------------
    # Several issues in the detail-view for property type have been fixed :
        - Global buttons were missing (to go to the configuration page & to create a new type).
        - The credentials for the buttons are now correct.
        - Disabled buttons are not clickable anymore, & their style has been improved.
    # Apps :
        * Emails :
            - Some permissions checks in the mail history brick were missing.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # Apps :
            * Email :
                - The class-view 'views.sending.SendingBricksReloading' now checks permissions.
            * Commercial :
                - The view 'views.strategy.BaseEvaluatedOrganisationView' has been improved to be easier to modify.
                - The class-view 'views.strategy.MatrixBricksReloading' now checks permissions.


== Version 2.5.5 ==

  UPGRADE NOTE :
    - You should re-generate the media files (creme generatemedia --settings=[...]).

  Users side :
  ------------
     # Some fields associated to a static list of values (attributes "choices" in Python)
       are not proposed by the Batch-Process form anymore.
     # A style issue in FireFox, in the form for displayed user's name, has been fixed.
     # A bug in brick reloading has been fixed (it crashes with several invalid IDs).
     # Apps :
        * Documents :
            - In new installations, Folders had no "assistants" bricks on their detail-view.
        * Billing :
            - The order of lines was incorrect in exported data (PDF, xls): the order set manually with drag'n drop was not used.
            - An crash in the configuration of export (when the configured engine was not installed anymore) has been fixed.

  Developers side :
  -----------------

    Non breaking changes :